# JavaRAG

./: .env.example  .gitignore  README.md  README_ZH.md  pyproject.toml  webui.py
src/: __init__.py  config.py  demo.py  ingestion_pipeline.py  jar_processor.py  java_parser.py  rag_service.py  vector_db.py
src/frontend/: index.html  webui_server.py
src/frontend/static/css/: style.css
src/frontend/static/js/: app.js
